--- a/trunk/release-notes.txt
+++ b/trunk/release-notes.txt
@@ -11,6 +11,7 @@ o Support for as many projects as your RAM and disks allow. In one single server
 o Multi channel notification on build results. (Email, IRC, built-in Web pages, DCTray - windows system tray)
 o Supports parallel builds.
 o Builds are trigged by the SCM (CVS) upon commits. DamageControl can install SCM triggers automatically.
+o Pluggable API for cool extensions
 
 You can look at a live deployment here: http://builds.codehaus.org/public/dashboard (Yes, DamageControl runs on Linux too)
 If you want to add a project, go here: http://builds.codehaus.org/private/dashboard (ask Jon or Aslak for username/password)
