--- a/trunk/release-notes.txt
+++ b/trunk/release-notes.txt
@@ -1,41 +1,50 @@
+Release 0.3
+===========
+
+* Much better performance under Windows (with Cygwin build of Ruby instead of mswin32).
+
+Release 0.2
+===========
+
 The DamageControl Team (Jon Tirsen and Aslak Hellesoy) are proud to release DamageControl 0.2.
 
-<a href="http://damagecontrol.codehaus.org/">http://damagecontrol.codehaus.org/</a>
+http://damagecontrol.codehaus.org/
 
 DamageControl is a Continuous Integration server with the follwoing main features:
 
-<ul>
-<li> Simple configuration. No XML. All web based configuration.
-<li> Supports building of Java/Ant/Ruby/.NET/C++/Cobol/whatever - DamageControl is platform agnostic.
-<li> Self contained - comes with its own web server and Ruby runtime. (DamageControl is written in Ruby).
-<li> Support for as many projects as your RAM and disks allow. In one single server.
-<li> Multi channel notification on build results. (Email, IRC, built-in Web pages, DCTray - windows system tray)
-<li> Supports parallel builds.
-<li> Builds are trigged by the SCM (CVS) upon commits. DamageControl can install SCM triggers automatically.
-<li> Pluggable API for cool extensions
-<li> Integration with <a href="http://viewcvs.sourceforge.net/">ViewCVS</a> and <a href="http://www.cenqua.com/fisheye/">Fisheye</a>
-</ul>
+* Simple configuration. No XML. All web based configuration.
+* Supports building of Java/Ant/Ruby/.NET/C++/Cobol/whatever - DamageControl is platform agnostic.
+* Self contained - comes with its own web server and Ruby runtime. (DamageControl is written in Ruby).
+* Support for as many projects as your RAM and disks allow. In one single server.
+* Multi channel notification on build results. (Email, IRC, built-in Web pages, DCTray - windows system tray)
+* Supports parallel builds.
+* Builds are trigged by the SCM (CVS) upon commits. DamageControl can install SCM triggers automatically.
+* Pluggable API for cool extensions
+* Integration with [ViewCVS|http://viewcvs.sourceforge.net/] and [Fisheye|http://www.cenqua.com/fisheye/]
 
-You can look at a live deployment here: <a href="http://builds.codehaus.org/public/dashboard">http://builds.codehaus.org/public/dashboard</a>
-If you want to add a project, go here: <a href="http://builds.codehaus.org/private/dashboard">http://builds.codehaus.org/private/dashboard</a> (ask Jon or Aslak for username/password)
+You can look at a live deployment here: http://builds.codehaus.org/public/dashboard
+If you want to add a project, go here: http://builds.codehaus.org/private/dashboard (ask Jon or Aslak for username/password)
 N.B! Due to a misconfiguration of the Apache proxy on Codehaus, this doesn't work with IE yet. Use a real browser like Firefox or Opera.
 You can also monitor these Codehaus DamageControl server's activity on irc://irc.codehaus.org/damagecontrol
 
 Things that didn't go into this release, but will go into one of the upcoming releases:
 
-<ul>
-<li> Subversion support (nearly there!).
-<li> Perforce suport.
-<li> Support for poll based builds (in addition to trigged builds)
-<li> Better design of the web-pages (volunteers needed!).
-<li> Easy-to-use installers for Linux (apt, rpm etc)
-<li> More notification channels (RSS, Yahoo! messenger, Jabber, Eclipse plugin, IDEA plugin, Apple dock)
-</ul>
+* Subversion support (nearly there!).
+* Perforce suport.
+* Support for poll based builds (in addition to trigged builds)
+* Better design of the web-pages (volunteers needed!).
+* Easy-to-use installers for Linux (apt, rpm etc)
+* More notification channels (RSS, Yahoo! messenger, Jabber, Eclipse plugin, IDEA plugin, Apple dock)
 
-See <a href="http://jira.codehaus.org/secure/BrowseProject.jspa?id=10260">DamageControl JIRA</a> for a full list of bugs and feature requests. Feel free to register your own feature requests!
+See [DamageControl JIRA|http://jira.codehaus.org/secure/BrowseProject.jspa?id=10260] for a full list of bugs and feature requests.
+Feel free to register your own feature requests!
 
 Want to get involved with the development? -> Get on the user mailing list.
 Got questions about how to use the damn thing? -> Get on the dev mailing list.
-More info about mailing lists <a href="http://damagecontrol.codehaus.org/Mailing+lists">here</a>
+More info about mailing lists [here|http://damagecontrol.codehaus.org/Mailing+lists]
 
 The DamageControl Team
+
+Release 0.1
+===========
+No release notes for 0.1. This release capable of executing a command line trigged by a commit in CVS but not much more.
