--- a/rscm/trunk/README
+++ b/rscm/trunk/README
@@ -114,18 +114,17 @@ By including GenericSCMTests your test will automatically include the
 acceptance test suite for RSCM. As you will see later, this will be of great
 help when developing the Mooky class.
 
-Let's start implementing the Mooky class too:
+Let's start implementing the Mooky class too. Take a look at.
 
-<<< Rakefile
-<<< lib/rscm/mooky/mooky.rb
+ lib/rscm/mooky/mooky.rb
 
-Try running this test:
+Try running Mooky's test:
 
-  rake test TEST_FILES=**/mooky_test.rb
+  rake test TEST=test/mooky/mooky_test.rb
   
-Whoops - we got some failures! Let'see if we can get the test_basic method
-to get a little further before it fails. It failed because our checkout
-method returned nothing (nil).
+Whoops - we got some failures! It failed because our checkout method returned 
+nothing (nil). Let'see if we can get the a little further by implementing this
+method.
 
 The Mooky SCM happens to have a command line utility to perform a checkout.
 From the command line a checkout with mooky would be done like this:
@@ -133,7 +132,7 @@ From the command line a checkout with mooky would be done like this:
   cd somewhere
   mooky checkout --repo mooky://some/where/else
 
-This will print the following to standard out:
+Running this command will print the following to standard out:
 
   checkout build.xml
   checkout project.xml
@@ -142,19 +141,37 @@ This will print the following to standard out:
   
 What we need to do is to execute these commands from Ruby. We also need to 
 parse the output from the mooky command to determine the files that were checked out,
-so that we can return an array with the right information.
+so that we can return an array with the file names of the checked out files (the method 
+should also yield each file name as the execution proceeds).
 
-NOTE: If the SCM already has a 3rd party Ruby API (like Perforce), we would probably
-want to use that instead of the command line API.
+Once your checkout command works okay, the test will get you a little further. Just keep
+on going until all tests pass.
 
 NOTE: If the SCM doesn't have a command line utility or a 3rd party Ruby API, but instead
 provides libraries (perhaps in C), then you should consider writing a Ruby C extension
 instead.
 
+If the SCM has a Java interface, you can take the same approach as for StarTeam. There are
+Java classes for Changesets that allow easy interaction between Ruby and Java over YAML. 
+You can reuse these classes for other Java based SCMs (if there are any).
+
 == Writing the web interface
 
-TODO...
-(Pretty straightforward. Just follow the examples. Ask on the mailing list if you are confused.)
+Start by creating +app/views/project/_mooky.rhtml+. 
+
+Create a table with 2 columns and a row for each +attr_accessor+ in the Mooky class, preferrably
+with some explanatory text for the users so they know how to fill it in.
+
+You also need a javascript section at the top
+with a function called +mooky_init()+. This will be called when the page is loaded. If you don't
+have plans to do anything fancy here, just leave it blank.
+
+That's all!
+
+== Wiring it all up
+
+Just edit +lib/rscm.rb+ and +require+ your new scm class. Now you should see it coming up
+on the Source Control tab in the web interface.
 
 = Implementation notes
 
