Get the layout up and start separating daemon from view using Drb. (This solves a lot of problems wrt multithreaded Dir.chdir and absense of fork on windows).

--- a/rscm/trunk/README
+++ b/rscm/trunk/README
@@ -96,13 +96,13 @@ RSCM can generate html links to individual diff pages in SCM web frontends. Thes
 displayed on web pages, emails and other systems. The built-in RSS generator uses this.  
 Currently supported web front-ends are:
 
-* Fisheye
-* ViewCVS
+* Fisheye - http://www.cenqua.com/fisheye/
+* ViewCVS - http://viewcvs.sourceforge.net/
 
 Planned:
 
-* Trac
-* Chora
+* Trac - http://www.edgewall.com/trac/
+* Chora - http://horde.org/chora/
 
 This way links to diffs can be easily created.
 
